<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">
<!--    <item-->
<!--        android:id="@+id/ordersFragment2"-->
<!--        android:enabled="true"-->
<!--        android:icon="@drawable/ic_menu_product_list"-->
<!--        android:title="@string/text_menu_product_list"/>-->
    <item
        android:id="@+id/parametrFragment"
        android:enabled="true"
        android:icon="@drawable/ic_menu_order"
        android:title="@string/orders"/>
    <item
        android:id="@+id/page_3"
        android:enabled="true"
        android:icon="@drawable/ic_menu_found_list"
        android:title="@string/text_found_list"/>
    <item
        android:id="@+id/page_4"
        android:enabled="true"
        android:icon="@drawable/ic_give_money"
        android:title="@string/text_menu_given_money"/>
    <item
        android:id="@+id/page_5"
        android:enabled="true"
        android:icon="@drawable/ic_menu_basket"
        android:title="@string/text_menu_purchased"/>
</menu>